Ottimizzato codice test ed entity